--- a/style.css
+++ b/style.css
@@ -5,13 +5,31 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-nav{
+.nav{
     height: 80px;
     background: rgb(255, 69, 69);
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     padding: 0rem calc((100vw-1300px) /2);
+}
+
+#footer{
+
+    font: oblique;
+    background: rgb(255, 69, 69);
+    display: flex;
+    align-items: left;
+    justify-content:space-evenly;
+    text-decoration: none;
+    color: white;
+   
+}
+
+footer a {
+    color: white;
+    text-decoration: none;
+    padding: 0 1.5rem;
 }
 
 .logo{
